--- a/docs/src/4.10.Text.mdx
+++ b/docs/src/4.10.Text.mdx
@@ -16,7 +16,7 @@ import {Text} from './jsx/allLiveEditors'
 type Text = {
   pose: {
     position: { x: number, y: number, z: number },
-    orientation: { x: number, y: number, z: number, q: number }
+    orientation: { x: number, y: number, z: number, w: number }
   }
   scale: {
     x: number,
