--- a/docs/src/4.7.Overlay.mdx
+++ b/docs/src/4.7.Overlay.mdx
@@ -17,7 +17,7 @@ You can use `<Overlay />` to overlay DOM elements. The renderProp `renderItem` w
 type Overlay = {
   pose: {
     position: { x: number, y: number, z: number },
-    orientation: { x: number, y: number, z: number, q: number },
+    orientation: { x: number, y: number, z: number, w: number },
   },
 };
 
