--- a/docs/src/4.5.FilledPolygons.mdx
+++ b/docs/src/4.5.FilledPolygons.mdx
@@ -16,7 +16,7 @@ import { FilledPolygons } from './jsx/allLiveEditors'
 type FilledPolygon = {
   pose: {
     position: { x: number, y: number, z: number },
-    orientation: { x: number, y: number, z: number, q: number }
+    orientation: { x: number, y: number, z: number, w: number }
   }
   scale: {
     x: number,
