--- a/docs/src/4.8.Points.mdx
+++ b/docs/src/4.8.Points.mdx
@@ -16,7 +16,7 @@ import { Points } from './jsx/allLiveEditors'
 type Point = {
   pose: {
     position: { x: number, y: number, z: number },
-    orientation: { x: number, y: number, z: number, q: number }
+    orientation: { x: number, y: number, z: number, w: number }
   }
   scale: {
     x: number,
