--- a/docs/src/4.9.Spheres.mdx
+++ b/docs/src/4.9.Spheres.mdx
@@ -16,7 +16,7 @@ import {SpheresSingle, SpheresInstanced, SpheresInstancedColor} from './jsx/allL
 type Sphere = {
   pose: {
     position: { x: number, y: number, z: number },
-    orientation: { x: number, y: number, z: number, q: number }
+    orientation: { x: number, y: number, z: number, w: number }
   }
   scale: {
     x: number,
