--- a/docs/src/4.11.Triangles.mdx
+++ b/docs/src/4.11.Triangles.mdx
@@ -21,6 +21,7 @@ type Color =  {
 }
 
 type Triangle = {
+  id?: number, // positive integer
   pose: {
     position: { x: number, y: number, z: number },
     orientation: { x: number, y: number, z: number, w: number }
