--- a/docs/src/4.2.Cones.mdx
+++ b/docs/src/4.2.Cones.mdx
@@ -14,6 +14,7 @@ import { Cones } from './jsx/allLiveEditors'
 
 ```js
 type Cone = {
+  id?: number, // positive integer
   pose: {
     position: { x: number, y: number, z: number },
     orientation: { x: number, y: number, z: number, w: number }
