--- a/docs/src/4.4.Cylinders.mdx
+++ b/docs/src/4.4.Cylinders.mdx
@@ -14,6 +14,7 @@ import { Cylinders } from './jsx/allLiveEditors'
 
 ```js
 type Cylinder = {
+  id?: number, // positive integer
   pose: {
     position: { x: number, y: number, z: number },
     orientation: { x: number, y: number, z: number, w: number }
