--- a/docs/src/4.8.Points.mdx
+++ b/docs/src/4.8.Points.mdx
@@ -14,6 +14,7 @@ import { Points } from './jsx/allLiveEditors'
 
 ```js
 type Point = {
+  id?: number, // positive integer
   pose: {
     position: { x: number, y: number, z: number },
     orientation: { x: number, y: number, z: number, w: number }
