--- a/docs/src/4.1.Arrows.mdx
+++ b/docs/src/4.1.Arrows.mdx
@@ -14,6 +14,7 @@ import { Arrows } from './jsx/allLiveEditors'
 
 ```js
 type PoseArrow = {
+  id?: number, // positive integer
   pose: {
     position: { x: number, y: number, z: number },
     orientation: { x: number, y: number, z: number, q: number }
@@ -36,6 +37,7 @@ type PoseArrow = {
 
 ```js
 type PointArrow = {
+  id?: number, // positive integer
   points: [
     // the start of the arrow shaft
     {
