--- a/docs/src/4.3.Cubes.mdx
+++ b/docs/src/4.3.Cubes.mdx
@@ -14,6 +14,7 @@ import { Cubes } from './jsx/allLiveEditors'
 
 ```js
 type Cube = {
+  id?: number, // positive integer
   pose: {
     position: { x: number, y: number, z: number },
     orientation: { x: number, y: number, z: number, w: number }
