--- a/docs/src/4.6.Lines.mdx
+++ b/docs/src/4.6.Lines.mdx
@@ -14,6 +14,7 @@ import { LinesDemo, LinesWireframe } from "./jsx/allLiveEditors";
 
 ```js
 type Line = {
+  id?: number, // positive integer
   pose: {
     position: { x: number, y: number, z: number },
     orientation: { x: number, y: number, z: number, w: number }
