--- a/docs/src/4.9.Spheres.mdx
+++ b/docs/src/4.9.Spheres.mdx
@@ -14,6 +14,7 @@ import {SpheresSingle, SpheresInstanced, SpheresInstancedColor} from './jsx/allL
 
 ```js
 type Sphere = {
+  id?: number, // positive integer
   pose: {
     position: { x: number, y: number, z: number },
     orientation: { x: number, y: number, z: number, w: number }
