--- a/docs/src/3.4.MouseEvents.mdx
+++ b/docs/src/3.4.MouseEvents.mdx
@@ -1,4 +1,4 @@
-import { MouseEvents, MouseEventsInstanced } from './jsx/allLiveEditors.js';
+import { MouseEvents, MouseEventsInstanced } from './jsx/allLiveEditors';
 
 # MouseEvents
 
@@ -9,7 +9,7 @@ Currently Worldview supports the following mouse event handlers: `onDoubleClick`
 | `onDoubleClick` | `MouseHandler` |         |                                                                                              |
 | `onMouseDown`   | `MouseHandler` |         |                                                                                              |
 | `onMouseUp`     | `MouseHandler` |         |                                                                                              |
-| `onMouseMove`   | `MouseHandler` |         | only available if the `hitmapOnMouseMove` prop is set to `true` on the `Worldview` component |
+| `onMouseMove`   | `MouseHandler` |         | only available if the `hitmapOnMouseMove` prop is set to `true` on the Worldview component |
 | `onClick`       | `MouseHandler` |         |                                                                                              |
 
 ## Event Handler
