Auto generate anchor links for h2 and h3 links in markdown (#115)

--- a/docs/src/2.3.RenderingObjects.mdx
+++ b/docs/src/2.3.RenderingObjects.mdx
@@ -86,7 +86,7 @@ Check your browser to see the results – you have successfully created a Hello
 
 <HelloWorld />
 
-You can interact with Worldview by left-clicking and dragging to move the scene, or right-clicking and dragging to rotate. Learn more about [controlling the camera with your keyboard](#/docs/api/worldview).
+You can interact with Worldview by left-clicking and dragging to move the scene, or right-clicking and dragging to rotate. Learn more about [controlling the camera with your keyboard](#/docs/api/worldview/keyboard-controls).
 
 ## Controlling Objects' Position, Size, and Color
 
