Add mouse interaction to GLTFScene (#132)

--- a/docs/src/4.12.GLTFScene.mdx
+++ b/docs/src/4.12.GLTFScene.mdx
@@ -1,4 +1,5 @@
-import {DuckScene} from './jsx/allLiveEditors';
+import { DuckScene } from './jsx/allLiveEditors';
+import { DuckSceneHitmap } from './jsx/allLiveEditors';
 
 # GLTFScene
 
@@ -18,3 +19,7 @@ import {DuckScene} from './jsx/allLiveEditors';
 This example shows a common sample model from [KhronosGroup/glTF-Sample-Models](https://github.com/KhronosGroup/glTF-Sample-Models/tree/master/2.0).
 
 <DuckScene />
+
+## Mouse Interaction
+
+<DuckSceneHitmap />
