Allow GLTFScene to load different models (#145)

--- a/docs/src/4.12.GLTFScene.mdx
+++ b/docs/src/4.12.GLTFScene.mdx
@@ -1,5 +1,5 @@
-import { DuckScene } from './jsx/allLiveEditors';
-import { DuckSceneHitmap } from './jsx/allLiveEditors';
+import { GLTFScene } from './jsx/allLiveEditors';
+import { GLTFSceneHitmap } from './jsx/allLiveEditors';
 
 # GLTFScene
 
@@ -18,8 +18,8 @@ import { DuckSceneHitmap } from './jsx/allLiveEditors';
 
 This example shows a common sample model from [KhronosGroup/glTF-Sample-Models](https://github.com/KhronosGroup/glTF-Sample-Models/tree/master/2.0).
 
-<DuckScene />
+<GLTFScene />
 
 ## Mouse Interaction
 
-<DuckSceneHitmap />
+<GLTFSceneHitmap />
