Redesign Worldview command interactivity API (#177)
## Summary
Completely redesign the Worldview interactivity/mouse events API. 

New features:
* No longer have to manually manage `hitmapId`s: objects are returned by reference in event callbacks
* Optional support for stacked objects: mouse event callbacks can now return all objects under the mouse, instead of just the top-most object (off by default and currently hardcoded limit of 100 stacked objects for performance reasons)

Other API changes:
* Remove `makeCommand` in favor of simplifying the Command API
* Remove old methods for manually managing `hitmapId`s

Command syntax changes:
```
// Old
export const Triangle = makeCommand<Triangle>("Triangle", triangles);
// New
export function Triangles(props: { ...CommonCommandProps, children: TriangleList[] }) {
  return <Command getChildrenForHitmap={createInstancedGetChildrenForHitmap(3)} {...props} reglCommand={triangles} />;
}
```

Mouse event changes:
```
// Old
<Worldview 
  onClick={(event, { ray, objectId }) => {
    setSelectedObjectId(objectId);
  }}>
  ...
</Worldview>
// New
<Worldview 
  onClick={(event, { ray, objects }) => {
    setSelectedObjects(objects.map(({ object, instanceIndex }) => object));
  }}
  enableStackedObjectEvents>
  ...
</Worldview>
```

## Motivation
We want to support richer interactions with markers in the 3d panel in Webviz. Making these changes gives us a more scalable API for making those changes and unlocks stacked object support.

## Test plan
Unit tests are included for new modules.
Manual testing plan: visit every page in the docs and ensure the examples are working as expected.

## Release plan
This is a major API change that will require a Worldview version bump to 0.2.0.

--- a/docs/src/4.1.Arrows.mdx
+++ b/docs/src/4.1.Arrows.mdx
@@ -1,4 +1,4 @@
-import { Arrows } from './jsx/allLiveEditors'
+import { Arrows, ArrowsInteractive } from './jsx/allLiveEditors'
 
 # Arrows
 
@@ -69,3 +69,7 @@ type PointArrow = {
 ## Demo
 
 <Arrows />
+
+## Mouse Interaction
+
+<ArrowsInteractive />
