--- a/docs/src/3.1.Worldview.mdx
+++ b/docs/src/3.1.Worldview.mdx
@@ -10,7 +10,8 @@
 | `keyMap`              | `CameraKeyMap`                                  | {}                     | override default Worldview hotkeys                                                                      |
 | `shiftKeys`           | `boolean`                                       | true                   | enable/disable shift modifier for keyboard controls                                                     |
 | `backgroundColor`     | `Vec4`                                          | `[0,0,0,1]`            | change the scene background color                                                                       |
-| `hitmapOnMouseMove`   | `boolean`                                       |                        | if enabled, the clicked objectId will be returned from the mouse event handler                          |
+| `hitmapOnMouseMove`   | `boolean`                                       |                        | if enabled, the clicked object will be returned from the mouse event handler. Disabled by default for performance reasons. |
+| `enableStackedObjectEvents` | `boolean`                                 |                        | if enabled, event handlers will be called with all objects the mouse cursor is on top of, not just the top-most object. Disabled by default for performance reasons. |
 | `children`            | `React.Node`                                    |                        | regl components to render inside the Worldview                                                          |
 | `style`               | `{ [styleAttribute: string]: number | string }` | {}                     | html style object for the Worldview root element                                                        |
 | `showDebug`           | `boolean`                                       |                        | show debug information                                                                                  |
