--- a/docs/src/4.1.Arrows.mdx
+++ b/docs/src/4.1.Arrows.mdx
@@ -1,4 +1,4 @@
-import { Arrows, ArrowsInteractive } from './jsx/allLiveEditors'
+import { Arrows } from './jsx/allLiveEditors'
 
 # Arrows
 
@@ -69,7 +69,3 @@ type PointArrow = {
 ## Demo
 
 <Arrows />
-
-## Mouse Interaction
-
-<ArrowsInteractive />
