--- a/docs/src/4.3.Cubes.mdx
+++ b/docs/src/4.3.Cubes.mdx
@@ -10,7 +10,7 @@ import { Cubes } from './jsx/allLiveEditors'
 | ---------- | -------- | ------- | ------------------------------- |
 | `children` | `Cube[]` | `[]`    | array of cube markers to render |
 
-### Cube
+### Cone
 
 ```js
 type Cube = {
