Add FOV and frustum plane distances to cameraState (#213)
* Add FOV and frustum plane distances to cameraState
* Fill in missing cameraState properties from DEFAULT_CAMERA_STATE

--- a/docs/src/2.5.AddingInteractivity.mdx
+++ b/docs/src/2.5.AddingInteractivity.mdx
@@ -34,7 +34,7 @@ Let's also enable manual camera movement, so we can see the duck better.
 
 ```js
 // use `defaultCameraState` to turn Worldview to uncontrolled component
-<Worldview defaultCameraState={{ ...DEFAULT_CAMERA_STATE, distance: 160 }}>
+<Worldview defaultCameraState={{ distance: 160 }}>
 ```
 
 Next, let's add a `clickedObjectIds` state to keep track of the clicked spheres. We'll also use this `clickedObjectIds` state to generate cube obstacles.
