--- a/docs/src/3.2.Camera.mdx
+++ b/docs/src/3.2.Camera.mdx
@@ -24,6 +24,9 @@ You can move the camera around using the mouse/trackpad, or by using the keyboar
 | `distance`          | `number`  | `75`           | distance between the camera and target                                                          |
 | `phi`               | `number`  | `Math.PI/4`    | angle in radians from +z pole to -z pole, range: [0, π]. Ignored when `perspective` is false    |
 | `thetaOffset`       | `number`  | `0`            | offset azimuth angle in radians, +θ corresponds to +x→+y, range: [0, 2π]                        |
+| `fovy`              | `number`  | `Math.PI/4`    | field of view in the y direction, in radians                                                    |
+| `near`              | `number`  | `0.01`         | distance to the frustum near plane                                                              |
+| `far`               | `number`  | `5000`         | distance to the frustum far plane                                                               |
 
 <CameraState />
 
