Fix documentation for Arrows (#229)
Fix small documentation error. orientation should take in a w field rather than q.

--- a/docs/src/4.1.Arrows.mdx
+++ b/docs/src/4.1.Arrows.mdx
@@ -17,7 +17,7 @@ type PoseArrow = {
   id?: number, // positive integer
   pose: {
     position: { x: number, y: number, z: number },
-    orientation: { x: number, y: number, z: number, q: number }
+    orientation: { x: number, y: number, z: number, w: number }
   }
   scale: {
     x: number, // arrow length
