Make lines truly instanced (#246)
* Make lines truly instanced

Make the lines component able to take multiple poses per marker.
This will help us implement some markers that have different poses
instead of different points. While we're at it, make the loading
of colors into lines more efficient by passing a typed array
directly to regl.

Test plan: added a story, test that existing tests continue working.

* Address comments

--- a/docs/src/4.6.Lines.mdx
+++ b/docs/src/4.6.Lines.mdx
@@ -1,4 +1,4 @@
-import { LinesDemo, LinesWireframe, LinesHitmap } from "./jsx/allLiveEditors";
+import { LinesDemo, LinesWireframe, LinesHitmap, LinesPoses } from "./jsx/allLiveEditors";
 
 # Lines
 
@@ -22,6 +22,13 @@ type Line = {
     position: { x: number, y: number, z: number },
     orientation: { x: number, y: number, z: number, w: number }
   }
+  // Lines can optionally include multiple poses.
+  poses: [
+    {
+      position: { x: number, y: number, z: number },
+      orientation: { x: number, y: number, z: number, w: number }
+    }
+  ],
   scale: {
     x: number,
     y: number,
@@ -44,6 +51,10 @@ type Line = {
 ## Wireframe Example
 
 <LinesWireframe />
+
+## Multi-Pose Example
+
+<LinesPoses />
 
 ## Mouse Interaction
 
